// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container renders correctly 1`] = `
<DocumentFragment>
  .emotion-1 {
  margin-top: 40px;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-5.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-bottom: 8px;
}

.emotion-8 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
}

.emotion-8.emotion-8 {
  margin-top: 0;
  margin-bottom: 0;
  margin-right: 16px;
}

.emotion-11 {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 24px;
  padding-bottom: 24px;
  border: 1px solid #d4dae7;
  opacity: inherit;
  cursor: default;
}

.emotion-11>* {
  margin-top: 0;
}

.emotion-11>*+* {
  margin-top: 16px;
}

<div
    class="emotion-0 emotion-1 emotion-2"
  >
    <div
      class="emotion-3 emotion-4"
    >
      <div
        class="emotion-5 emotion-2"
      >
        <h2
          class="emotion-7 emotion-8 emotion-2"
        />
      </div>
      <div />
    </div>
    <div
      class="emotion-10 emotion-11 emotion-2"
    >
      Hello
    </div>
  </div>
</DocumentFragment>
`;

exports[`Container renders correctly on edition mode 1`] = `
<DocumentFragment>
  .emotion-1 {
  margin-top: 40px;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-5.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-bottom: 8px;
}

.emotion-8 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
}

.emotion-8.emotion-8 {
  margin-top: 0;
  margin-bottom: 0;
  margin-right: 16px;
}

.emotion-11 {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 24px;
  padding-bottom: 24px;
  border: 1px solid #4f0599;
  opacity: inherit;
  cursor: default;
}

.emotion-11>* {
  margin-top: 0;
}

.emotion-11>*+* {
  margin-top: 16px;
}

<div
    class="emotion-0 emotion-1 emotion-2"
  >
    <div
      class="emotion-3 emotion-4"
    >
      <div
        class="emotion-5 emotion-2"
      >
        <h2
          class="emotion-7 emotion-8 emotion-2"
        />
      </div>
      <div />
    </div>
    <div
      class="emotion-10 emotion-11 emotion-2"
    >
      Hello
    </div>
  </div>
</DocumentFragment>
`;

exports[`Container renders correctly when disabled 1`] = `
<DocumentFragment>
  .emotion-1 {
  margin-top: 40px;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-5.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-bottom: 8px;
}

.emotion-8 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
}

.emotion-8.emotion-8 {
  margin-top: 0;
  margin-bottom: 0;
  margin-right: 16px;
}

.emotion-11 {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 24px;
  padding-bottom: 24px;
  border: 1px solid #d4dae7;
  opacity: 0.4;
  cursor: not-allowed;
}

.emotion-11>* {
  margin-top: 0;
}

.emotion-11>*+* {
  margin-top: 16px;
}

<div
    class="emotion-0 emotion-1 emotion-2"
  >
    <div
      class="emotion-3 emotion-4"
    >
      <div
        class="emotion-5 emotion-2"
      >
        <h2
          class="emotion-7 emotion-8 emotion-2"
        />
      </div>
      <div />
    </div>
    <div
      class="emotion-10 emotion-11 emotion-2"
      disabled=""
    >
      Hello
    </div>
  </div>
</DocumentFragment>
`;

exports[`Container renders correctly with small variant 1`] = `
<DocumentFragment>
  .emotion-1 {
  margin-top: 40px;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-5.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-bottom: 8px;
}

.emotion-8 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
}

.emotion-8.emotion-8 {
  margin-top: 0;
  margin-bottom: 0;
  margin-right: 16px;
}

.emotion-11 {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 16px;
  padding-bottom: 16px;
  border: 1px solid #d4dae7;
  opacity: inherit;
  cursor: default;
}

.emotion-11>* {
  margin-top: 0;
}

.emotion-11>*+* {
  margin-top: 16px;
}

<div
    class="emotion-0 emotion-1 emotion-2"
  >
    <div
      class="emotion-3 emotion-4"
    >
      <div
        class="emotion-5 emotion-2"
      >
        <h2
          class="emotion-7 emotion-8 emotion-2"
        />
      </div>
      <div />
    </div>
    <div
      class="emotion-10 emotion-11 emotion-2"
    >
      Hello
    </div>
  </div>
</DocumentFragment>
`;
